# dingtalk-wayland-screenshare

./: Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  dingtalk-wayland-screenshare  dingtalk-wayland-screenshare.desktop
src/: image_proc.rs  lib.rs  portal.rs  pw.rs
